# rpt

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/: basic.rs  compound.rs  cornell.rs  cylinder.rs  dragon.rs  fractal_spheres.rs  fractal_teapots.rs  glass.rs  hdri.rs  lego.rs  marbles.rs  metal.rs  monomial_glass.rs  pegasus.rs  photon_map.rs  rustacean.rs  simple_video.rs  sphere.rs  spheres.rs  teapot.rs  wine_glass.rs
src/: buffer.rs  camera.rs  color.rs  environment.rs  io.rs  kdtree.rs  lib.rs  light.rs  material.rs  object.rs  ode.rs  odt.rs  renderer.rs  scene.rs  shape.rs  transform.rs
src/ode/: particle_state.rs  particle_system.rs  rk4.rs  simple_circle_system.rs  solid_gravity_system.rs
src/odt/: particle_state.rs  particle_system.rs  rk4.rs  simple_circle_system.rs  solid_gravity_system.rs
src/shape/: cube.rs  mesh.rs  monomial_surface.rs  plane.rs  sphere.rs
