[package]
name = "rpt"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2018"

[dependencies]
glm = { version = "0.8.0", package = "nalgebra-glm" }
image = "0.23.10"
rand = "0.7.3"
rand_distr = "0.3.0"
rayon = "1.5.0"

[dev-dependencies]
color-eyre = "0.5.6"
ureq = "1.5.2"

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"
