[package]
name = "rpt"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>", "Alexander Morozov <scanhex@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Physically-based path tracing renderer written in Rust"
repository = "https://github.com/ekzhang/rpt"
documentation = "https://docs.rs/rpt"
keywords = ["path-tracing", "ray-tracing", "pbr", "rendering", "graphics"]
categories = ["graphics", "rendering::engine", "rendering::data-formats", "multimedia::images"]
edition = "2018"

[dependencies]
glm = { version = "0.8.0", package = "nalgebra-glm" }
image = "0.23.10"
rand = "0.7.3"
rand_distr = "0.3.0"
rayon = "1.5.0"

[dev-dependencies]
color-eyre = "0.5.6"
ureq = "1.5.2"
zip = "0.5.8"
tempfile = "3.1.0"

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"
